--- a/artcgallery.ipynb
+++ b/artcgallery.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "artcontrol gallery\n",
+    "<h3>artcontrol gallery</h3>\n",
     "\n",
     "Create gallery for artcontrol artwork. \n",
     "\n",
@@ -12,12 +12,24 @@
     "\n",
     "Create blog post for each day there is a post.\n",
     "\n",
-    "It will need to list the files for that day and create a markdown file in posts that contains the artwork. Name of art then followed by each pience of artwork -line, bw, color. "
+    "It will need to list the files for that day and create a markdown file in posts that contains the artwork. Name of art then followed by each pience of artwork -line, bw, color. \n",
+    "\n",
+    "write a message about each piece of artwork. \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +41,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "raw = arrow.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "yraw = raw.strftime(\"%Y\")\n",
+    "mntaw = raw.strftime(\"%m\")\n",
+    "dytaw = raw.strftime(\"%d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fulda = yraw + '/' + mntaw + '/' + dytaw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fultim = fulda + ' ' + raw.strftime('%H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -95,29 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mondir = os.listdir(galerdir + curyr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "daydir = os.listdir(galerdir + curyr + '/' + curmon )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -125,32 +170,10 @@
     {
      "data": {
       "text/plain": [
-       "['30']"
+       "['2015', '2016']"
       ]
      },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "daydir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['2015']"
-      ]
-     },
-     "execution_count": 219,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +184,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mondir = os.listdir(galerdir + curyr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "daydir = os.listdir(galerdir + curyr + '/' + curmon )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -169,10 +214,54 @@
     {
      "data": {
       "text/plain": [
-       "['10']"
+       "[]"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daydir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2015', '2016']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "galdir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['02', '01']"
+      ]
+     },
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -191,10 +280,10 @@
     {
      "data": {
       "text/plain": [
-       "['30']"
+       "[]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -253,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -267,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -275,10 +364,10 @@
     {
      "data": {
       "text/plain": [
-       "['2015']"
+       "['2015', '2016']"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -297,10 +386,10 @@
     {
      "data": {
       "text/plain": [
-       "['10']"
+       "['02', '01']"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,84 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['30']"
-      ]
-     },
-     "execution_count": 228,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "daydir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2015-10-30'"
-      ]
-     },
-     "execution_count": 229,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(arnow.date())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 230,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "daypost = open('/home/wcmckee/github/artcontrolme/posts/artfor' + str(arnow.date()) + '.md', 'w')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 231,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "todayart = os.listdir(fulldaypath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "titlewor = list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -399,7 +411,183 @@
        "[]"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daydir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2016-02-05'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(arnow.date())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Post name: owaspnz\n"
+     ]
+    }
+   ],
+   "source": [
+    "nameofblogpost = input('Post name: ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check to see if that blog post name already excist, if so error and ask for something more unique! \n",
+    "\n",
+    "input art piece writers. Shows the art then asks for input, appending the input below the artwork. Give a name for the art that is appended above. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "daypost = open('/home/wcmckee/github/artcontrolme/posts/' + nameofblogpost + '.md', 'w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "daymetapost = open('/home/wcmckee/github/artcontrolme/posts/' + nameofblogpost + '.meta', 'w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daymetapost.write('.. title: ' + nameofblogpost + ' \\n' + '.. slug: ' + nameofblogpost + ' \\n' + '.. date: ' + fultim + ' \\n' + '.. author: wcmckee')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "daymetapost.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "todayart = os.listdir(fulldaypath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "titlewor = list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -428,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -436,10 +624,10 @@
     {
      "data": {
       "text/plain": [
-       "'/galleries/2015/10/30/'"
+       "'/galleries/2016/02/05/'"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -461,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -469,33 +657,16 @@
     {
      "data": {
       "text/plain": [
-       "['LeahTHP-bw.png',\n",
-       " 'LeahTHP-line.png',\n",
-       " 'SWEDEDOESMAKEUP-bw.png',\n",
-       " 'SWEDEDOESMAKEUP-line.png',\n",
-       " '_SEMPERRVIVUM-color.png',\n",
-       " '_SEMPERRVIVUM-gratscale.png',\n",
-       " '_SEMPERRVIVUM-line.png',\n",
-       " 'bawkbawkmudder_udder-line.png',\n",
-       " 'iwbm-line.png',\n",
-       " 'jem-bw.png',\n",
-       " 'jem-color.png',\n",
-       " 'jem-line.png',\n",
-       " 'kirsty-color.png',\n",
-       " 'kirsty-line.png',\n",
-       " 'missespills-bw.png',\n",
-       " 'missespills-color.png',\n",
-       " 'missespills-line.png',\n",
-       " 'partyonconnor-bw.png',\n",
-       " 'partyonconnor-color.png',\n",
-       " 'partyonconnor-line.png',\n",
-       " 'sparktheflame-line.png',\n",
-       " 'themilkcollective-bw.png',\n",
-       " 'themilkcollective-color.png',\n",
-       " 'themilkcollective-line.png']"
+       "['owasp16-bus.png',\n",
+       " 'owasp16-crypto.png',\n",
+       " 'owasp16-foo.png',\n",
+       " 'owasp16-kaltura.png',\n",
+       " 'owasp16-morning.png',\n",
+       " 'owasp16-plane.png',\n",
+       " 'owasp16-webrtc.png']"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -518,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -526,6 +697,24 @@
    "source": [
     "daypost.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
