--- a/artcgallery.ipynb
+++ b/artcgallery.ipynb
@@ -15,28 +15,55 @@
     "It will need to list the files for that day and create a markdown file in posts that contains the artwork. Name of art then followed by each pience of artwork -line, bw, color. \n",
     "\n",
     "write a message about each piece of artwork. \n",
+    "\n",
+    "need to read a config file which lists the blog to update. \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "import arrow"
+    "import arrow\n",
+    "import getpass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "myusr = getpass.getuser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wcm'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myusr"
    ]
   },
   {
@@ -87,15 +114,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "collapsed": true
@@ -140,29 +158,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "galerdir = ('/home/wcmckee/github/artcontrolme/galleries/')"
+    "artctrlpath = '/home/{}/git/artctrl/'.format(myusr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "galerdir = ('{}/galleries/'.format(artctrlpath))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "galdir = os.listdir('/home/wcmckee/github/artcontrolme/galleries/')"
+    "galdir = os.listdir(galerdir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -170,10 +199,10 @@
     {
      "data": {
       "text/plain": [
-       "['2015', '2016']"
+       "['2016']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +246,7 @@
        "[]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -236,10 +265,10 @@
     {
      "data": {
       "text/plain": [
-       "['2015', '2016']"
+       "['2016']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -258,10 +287,10 @@
     {
      "data": {
       "text/plain": [
-       "['02', '01']"
+       "['06', '07']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -283,7 +312,7 @@
        "[]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,16 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -331,7 +351,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fridpath = ('{}{}/{}/{}').format(galerdir, curyr, curmon, curday)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/wcm/git/artctrl//galleries/2016/07/24'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fridpath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -342,7 +395,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/wcm/git/artctrl//galleries/2016/07/24'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fulldaypath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -364,10 +439,10 @@
     {
      "data": {
       "text/plain": [
-       "['2015', '2016']"
+       "['2016']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -386,10 +461,10 @@
     {
      "data": {
       "text/plain": [
-       "['02', '01']"
+       "['06', '07']"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -411,7 +486,7 @@
        "[]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -430,10 +505,10 @@
     {
      "data": {
       "text/plain": [
-       "'2016-02-05'"
+       "'2016-07-24'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -453,7 +528,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Post name: owaspnz\n"
+      "Post name: kiwijam-test\n"
      ]
     }
    ],
@@ -472,22 +547,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "daypost = ('{}posts/{}.md'.format(artctrlpath, nameofblogpost))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/wcm/git/artctrl/posts/kiwijam-test.md'"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daypost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "daypost = open('/home/wcmckee/github/artcontrolme/posts/' + nameofblogpost + '.md', 'w')"
+    "daymetapost = ('{}posts/{}.meta'.format(artctrlpath, nameofblogpost))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "daymdpost = ('{}posts/{}.md'.format(artctrlpath, nameofblogpost))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#daypost = open('{}/posts/{}.md'.format(artctrlpath, nameofblogpost), 'w')"
    ]
   },
   {
@@ -498,7 +619,31 @@
    },
    "outputs": [],
    "source": [
-    "daymetapost = open('/home/wcmckee/github/artcontrolme/posts/' + nameofblogpost + '.meta', 'w')"
+    "#daymetapost = open('{}/posts/{}.meta'.format(artctrlpath, nameofblogpost), 'w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#with open(daymetapost, 'w') as daympo: \n",
+    "#    daympo.write('.. title: ' + nameofblogpost + ' \\n' + '.. slug: ' + nameofblogpost + ' \\n' + '.. date: ' + fultim + ' \\n' + '.. author: wcmckee')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(daymetapost, 'w') as daympo: \n",
+    "    daympo.write('.. title: {} \\n.. slug: {} \\n.. date: {} \\n.. author: {}'.format(nameofblogpost, nameofblogpost, fultim, myusr))"
    ]
   },
   {
@@ -520,7 +665,7 @@
     }
    ],
    "source": [
-    "daymetapost.write('.. title: ' + nameofblogpost + ' \\n' + '.. slug: ' + nameofblogpost + ' \\n' + '.. date: ' + fultim + ' \\n' + '.. author: wcmckee')"
+    "#daymetapost.write('.. title: ' + nameofblogpost + ' \\n' + '.. slug: ' + nameofblogpost + ' \\n' + '.. date: ' + fultim + ' \\n' + '.. author: wcmckee')"
    ]
   },
   {
@@ -531,30 +676,12 @@
    },
    "outputs": [],
    "source": [
-    "daymetapost.close()"
+    "#daymetapost.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -565,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -576,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -587,7 +714,7 @@
        "[]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,18 +732,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "galpath = ('/galleries/' + curyr + '/' + curmon + '/' + curday + '/')"
+    "#galpath = ('/galleries/' + curyr + '/' + curmon + '/' + curday + '/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gallerpath = ('/galleries/{}/{}/{}/'.format(curyr, curmon, curday))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -624,21 +762,32 @@
     {
      "data": {
       "text/plain": [
-       "'/galleries/2016/02/05/'"
+       "'/galleries/2016/07/24/'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "galpath"
+    "gallerpath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#galpath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -649,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -657,22 +806,36 @@
     {
      "data": {
       "text/plain": [
-       "['owasp16-bus.png',\n",
-       " 'owasp16-crypto.png',\n",
-       " 'owasp16-foo.png',\n",
-       " 'owasp16-kaltura.png',\n",
-       " 'owasp16-morning.png',\n",
-       " 'owasp16-plane.png',\n",
-       " 'owasp16-webrtc.png']"
+       "['border-char.png',\n",
+       " 'lifedraw-sittinhere-bw.png',\n",
+       " 'lifedraw-sittinhere.png',\n",
+       " 'lifedraw-sleepnow.png',\n",
+       " 'lifedraw-standingfin.png',\n",
+       " 'lifedraw-warmup.png',\n",
+       " 'watertreat.png',\n",
+       " 'wdh-catat.png']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "todayart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(daymdpost, 'w') as daymark:\n",
+    "    for toar in todayart:\n",
+    "        daymark.write('![{}]({}{})\\n'.format(toar.strip('.png'), galpath, toar))"
    ]
   },
   {
@@ -697,24 +860,6 @@
    "source": [
     "daypost.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
