--- a/artcgallery.ipynb
+++ b/artcgallery.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 147,
    "metadata": {
     "collapsed": true
    },
@@ -30,12 +30,13 @@
    "source": [
     "import os\n",
     "import arrow\n",
-    "import getpass"
+    "import getpass\n",
+    "import shutil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 148,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +58,7 @@
        "'wcm'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 150,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 152,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 154,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 156,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 157,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 158,
    "metadata": {
     "collapsed": true
    },
@@ -169,18 +170,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 197,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "galerdir = ('{}/galleries/'.format(artctrlpath))"
+    "galerdir = ('{}galleries/'.format(artctrlpath))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 198,
    "metadata": {
     "collapsed": false
    },
@@ -191,139 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['2016']"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "galdir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "mondir = os.listdir(galerdir + curyr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "daydir = os.listdir(galerdir + curyr + '/' + curmon )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "daydir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['2016']"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "galdir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['06', '07']"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mondir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "daydir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 208,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 202,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mondir = os.listdir(galerdir + curyr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
    "metadata": {
     "collapsed": false
    },
@@ -351,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 210,
    "metadata": {
     "collapsed": true
    },
@@ -362,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false
    },
@@ -370,10 +250,10 @@
     {
      "data": {
       "text/plain": [
-       "'/home/wcm/git/artctrl//galleries/2016/07/24'"
+       "'/home/wcm/git/artctrl/galleries/2016/07/24'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 212,
    "metadata": {
     "collapsed": true
    },
@@ -395,29 +275,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/wcm/git/artctrl//galleries/2016/07/24'"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fulldaypath"
+    "#fulldaypath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 203,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "daydir = os.listdir(galerdir + curyr + '/' + curmon )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 215,
    "metadata": {
     "collapsed": false
    },
@@ -442,7 +322,7 @@
        "['2016']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 216,
    "metadata": {
     "collapsed": false
    },
@@ -464,7 +344,7 @@
        "['06', '07']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 217,
    "metadata": {
     "collapsed": false
    },
@@ -483,10 +363,10 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['24']"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 218,
    "metadata": {
     "collapsed": false
    },
@@ -508,7 +388,7 @@
        "'2016-07-24'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 219,
    "metadata": {
     "collapsed": false
    },
@@ -528,7 +408,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Post name: kiwijam-test\n"
+      "Post name: kiwijamnowtest\n"
      ]
     }
    ],
@@ -547,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 220,
    "metadata": {
     "collapsed": false
    },
@@ -558,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 221,
    "metadata": {
     "collapsed": false
    },
@@ -566,10 +446,10 @@
     {
      "data": {
       "text/plain": [
-       "'/home/wcm/git/artctrl/posts/kiwijam-test.md'"
+       "'/home/wcm/git/artctrl/posts/kiwijamnowtest.md'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 222,
    "metadata": {
     "collapsed": true
    },
@@ -591,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 223,
    "metadata": {
     "collapsed": true
    },
@@ -602,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 224,
    "metadata": {
     "collapsed": false
    },
@@ -613,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 225,
    "metadata": {
     "collapsed": true
    },
@@ -624,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
@@ -636,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 227,
    "metadata": {
     "collapsed": false
    },
@@ -648,29 +528,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 228,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "85"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#daymetapost.write('.. title: ' + nameofblogpost + ' \\n' + '.. slug: ' + nameofblogpost + ' \\n' + '.. date: ' + fultim + ' \\n' + '.. author: wcmckee')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 229,
    "metadata": {
     "collapsed": false
    },
@@ -681,7 +550,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 230,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#mediapath = ('/media/removable/USB Drive/artnew/* {}'.format(fridpath))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#mediapath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "newartlis = os.listdir('/media/removable/USB Drive/newart')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for newar in newartlis:\n",
+    "    shutil.copy('/media/removable/USB Drive/newart/{}'.format(newar), fridpath)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Copy images from folder to galleries path. Needs to cp files that on usb drive across OR copy from network. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#shutil.copyfile('/media/removable/USB Drive/artnew/*.png', fridpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
    "metadata": {
     "collapsed": false
    },
@@ -692,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 267,
    "metadata": {
     "collapsed": true
    },
@@ -703,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 268,
    "metadata": {
     "collapsed": false
    },
@@ -714,7 +647,7 @@
        "[]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 269,
    "metadata": {
     "collapsed": true
    },
@@ -743,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 270,
    "metadata": {
     "collapsed": true
    },
@@ -754,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 271,
    "metadata": {
     "collapsed": false
    },
@@ -765,7 +698,7 @@
        "'/galleries/2016/07/24/'"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 272,
    "metadata": {
     "collapsed": false
    },
@@ -787,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 273,
    "metadata": {
     "collapsed": false
    },
@@ -798,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 274,
    "metadata": {
     "collapsed": false
    },
@@ -806,17 +739,21 @@
     {
      "data": {
       "text/plain": [
-       "['border-char.png',\n",
-       " 'lifedraw-sittinhere-bw.png',\n",
-       " 'lifedraw-sittinhere.png',\n",
-       " 'lifedraw-sleepnow.png',\n",
-       " 'lifedraw-standingfin.png',\n",
-       " 'lifedraw-warmup.png',\n",
-       " 'watertreat.png',\n",
-       " 'wdh-catat.png']"
+       "['ausmil.png',\n",
+       " 'badusb.png',\n",
+       " 'bbcafe-line.png',\n",
+       " 'cybervikinh-color.png',\n",
+       " 'cybervikinh-grayscale.png',\n",
+       " 'iswhaat-line.png',\n",
+       " 'itwillnotbemine3.png',\n",
+       " 'keynote.png',\n",
+       " 'kiwicon6.png',\n",
+       " 'kiwicon7.png',\n",
+       " 'kiwiconstart.png',\n",
+       " 'partykiwicon.png']"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 275,
    "metadata": {
     "collapsed": false
    },
@@ -835,30 +772,30 @@
    "source": [
     "with open(daymdpost, 'w') as daymark:\n",
     "    for toar in todayart:\n",
-    "        daymark.write('![{}]({}{})\\n'.format(toar.strip('.png'), galpath, toar))"
+    "        daymark.write('![{}]({}{})\\n'.format(toar.strip('.png'), gallerpath, toar))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 276,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for toar in todayart:\n",
-    "    daypost.write(('!' + '[' + toar.strip('.png') + '](' + galpath + toar + ')\\n'))\n"
+    "#for toar in todayart:\n",
+    "#    daypost.write(('!' + '[' + toar.strip('.png') + '](' + galpath + toar + ')\\n'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 277,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "daypost.close()"
+    "#daypost.close()"
    ]
   }
  ],
