--- a/artcgallery.ipynb
+++ b/artcgallery.ipynb
@@ -17,22 +17,84 @@
     "write a message about each piece of artwork. \n",
     "\n",
     "need to read a config file which lists the blog to update. \n",
-    "\n"
+    "\n",
+    "When a new site is built upload it to artctrl aws s3 bucket"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import os\n",
     "import arrow\n",
     "import getpass\n",
-    "import shutil"
+    "import shutil\n",
+    "import boto3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "s3 = boto3.resource('s3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "s3.ServiceResource()"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -427,6 +489,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "s3.Bucket(name='kiwijamnowtest')"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3.create_bucket(Bucket=nameofblogpost)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 220,
    "metadata": {
     "collapsed": false
@@ -797,6 +881,100 @@
    "source": [
     "#daypost.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/wcm/git/artctrl/posts/kiwijamnowtest.md'"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daymdpost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "outpupa = ('{}/output/'.format(artctrlpath))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sync output to aws s3? y/N N\n"
+     ]
+    }
+   ],
+   "source": [
+    "syncaws = input('sync output to aws s3? y/N ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "did not sync\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'y' in syncaws:\n",
+    "    os.system('aws s3 sync {} s3://artctrl.me'.format(outpupa, nameofblogpost))\n",
+    "else:\n",
+    "    print('did not sync')\n",
+    "    pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
